# noil

./: CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
docs/: API.md  FIBER_PROCESSING.md  TODO.md
frontend/: index.html
frontend/css/: CODEMIRROR_CUSTOMIZATION.md  codemirror-themes.css  style.css
frontend/js/: api.js  app.js  colors.js  config-editor.js  fiber-processing.js  logviewer.js  theme-manager.js  timeline.js
samples/: README.md  collector-config.yml  parent-config.yml  sample-config.yml
specs/: API.md  CODEMIRROR_SETUP.md  COLLECTOR_MODE.md  CONFIG_SYSTEM.md  EDITOR_THEMES_IMPLEMENTATION.md  MODE_UNIFICATION_REFACTOR.md  TODO.md  WORKING_SET_IMPLEMENTATION.md
specs/issues/: collector-http-endpoints-missing.md  default-time-range-excludes-data.md  ui-source-fiber-types-not-shown.md
src/: lib.rs  main.rs
src/cli/: config.rs  mod.rs  run.rs
src/collector/: api.rs  batch.rs  batch_buffer.rs  epoch_batcher.rs  mod.rs  runner.rs  server.rs
src/config/: diff.rs  generate.rs  mod.rs  parse.rs  reconcile.rs  types.rs  version.rs
src/fiber/: mod.rs  processor.rs  rule.rs  session.rs
src/parent/: collector_client.rs  collector_stream.rs  mod.rs  runner.rs
src/pipeline/: backpressure.rs  channel.rs  mod.rs  runner.rs
src/reprocessing/: mod.rs
src/sequencer/: local.rs  merge.rs  mod.rs
src/source/: mod.rs  reader.rs  timestamp.rs
src/storage/: checkpoint.rs  duckdb.rs  mod.rs  traits.rs
tests/: collector_phase2_tests.rs  config_phase1_tests.rs  config_tests.rs  end_to_end_tests.rs  parent_phase3_tests.rs
(+20 files in other folders)
