[package]
name = "noil"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
regex = "1"
duckdb = { version = "1.0", features = ["bundled"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace"] }
tokio-util = "0.7"
futures = "0.3"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
async-trait = "0.1"
dirs = "5"
sha2 = "0.10"
dialoguer = "0.11"
console = "0.15"
similar = "2.4"
humantime-serde = "1.1"
reqwest = { version = "0.11", features = ["json"] }
hostname = "0.3"

[dev-dependencies]
tempfile = "3"
